# advanced-agent

./: .env.sample  .gitignore  README.md  TP_REQUISITS.md  agent.config.sample.toml  agent.config.toml.example  justfile  main.py  pyproject.toml
.notes/: notas.md
.phoenix/: phoenix.db  phoenix.db-shm  phoenix.db-wal
docs/: architecture.md  composition-root.md  presentation.html  presenter-brief.md  rag-base.md  reflection.md  reproduce.md  use-case.md
docs/analysis/: explore.md  research.md  test.md
docs/diagrams/: README.md  overview.puml  ownership.puml  runtime-collaboration.puml  sequence.puml
docs/evidence/: README.md  repo-analysis.otel.jsonl  task-1-analysis.txt  task-2-memory-recall.txt  task-evidence.md
docs/evidence/analysis/sample_app/: explore.md  research.md  test.md
scripts/: README.md  analyze_repo.py  ingest_rag.py
scripts/sample_app/: README.md
scripts/sample_app/app/: main.py
scripts/sample_app/app/routers/: items.py
scripts/sample_app/tests/: test_items.py
src/: README.md  src.puml
src/agent/: README.md  __init__.py  agent.puml  cli.py  documenter.py  interaction.py  planning.py  progress.py  rag_tool.py  session.py  subagent.py  synthesis.py  team.py
src/common/: README.md  __init__.py
src/harness/: README.md  __init__.py  assembly.py  harness.puml  harness.py
src/harness/context/: README.md  __init__.py  manager.py
src/harness/control/: README.md  __init__.py  control.puml  controller.py  decision.py  guard.py  iteration_limiter.py  progress_tracker.py
src/harness/delegation/: README.md  __init__.py  delegate.py  delegation.puml  report.py
src/harness/events/: README.md  __init__.py  audit.py  bus.py  event.py  events.puml  forwarder.py  handler.py
src/harness/loop/: README.md  __init__.py  agent_loop.py  loop.puml  navigator.py  phase.py
src/harness/runtime/: README.md  __init__.py  context.py  ledger.py  metadata.py  result.py  runtime.puml  state.py
src/harness/tools/: README.md  __init__.py  approval.py  catalog.py  executor.py  policy.py  registry.py  request.py  result.py  tool.py  tools.puml
src/llm/: README.md  __init__.py  llm.puml  messages.py  pricing.py
src/llm/ports/: __init__.py  chat_model.py  embedding_model.py
src/llm/providers/: __init__.py  openai_embedding_model.py  openai_model.py  placeholder.py
src/memory/: README.md  __init__.py  memory.puml  project_memory.py  service.py  store.py
src/observability/: README.md  __init__.py  observability.puml  phoenix.py  spans.py
src/prompts/: README.md  __init__.py
src/rag/: README.md  __init__.py  chunk.py  ingest.py  rag.puml  retriever.py  store.py
src/tests/: README.md  doubles.py  test_chat_model_port.py  test_cli.py  test_context.py  test_control.py  test_delegating_action.py  test_delegation.py  test_documenter.py  test_events.py  test_harness.py  test_ledger.py  test_llm_messages.py  test_loop.py  test_memory_service.py  test_memory_store.py  test_navigator.py  test_observability_phoenix.py  test_observability_spans.py  test_openai_provider.py  test_packaging_smoke.py  test_plan_mode.py  test_policy.py  test_pricing.py  test_progress.py  test_project_memory.py  test_rag.py  test_rag_tool.py  test_runtime.py  test_session.py  test_subagent.py  test_supervision.py  test_synthesis.py  test_team.py  test_tool_adapters.py  test_tools.py
(+12 files in other folders)
